      - ramCanvasPixelFilters.hpp is included by ramCanvasTpl.hpp
      - rcConvertors were moved out of mjr::ramCanvasTpl
      - ramCanvasPixelFilters are top level objects in namespace mjr::ramCanvasPixelFilter
      - Previous rcConvertors classes have new names (not prefixed with rcConverter)
      - Added mjr::ramCanvasPixelFilter::ScaleDownMean -- first non-homogenious filter.
  - Deprecated functionality
    - N/A
  - New functionality
    - MSVC:
      - With the switch to GTest, the unit tests are simple to run against MSVC.
      - Removed "experimental" warning when configuring with MSVC.
      - Added hints for using MSVC
      - Updated wMean tests to avoid integer cases on cast.
    - mjr::ramCanvasTpl::readTIFFfile: Added error 23: Image is tiled.
    - mjr::ramCanvasTpl::readTIFFfile: Added error 24: Image has a palette.
    - New method colorTpl::channelArithFlt2clrChan
    - Added warning to wMean method regarding the vulgarities of floating point arithmetic and casts
    - Added more compilers to CMakeLists.txt
      - NVHPC
      - IntelLLVM
    - Pixel Corners
      - Moved from experimental to production
      - Functions: int2realSideX, int2realSideY, int2realCorner
      - Example: demo_corners.cpp
    - Added mjr::ramCanvasTpl::getPxColorWrap()
    - Added mjr::ramCanvasTpl::getPxColorChanWrap()
    - markAlpha now defaults to true in mjr::ramCanvasTpl::writeTIFFfile()
  - Documentation
    - Added test coverage document
    - Updated all the docs to reflect GTest & C++23 switch.
  - Examples
    - New
      - peterdejongEAAO.cpp
      - demo_corners.cpp
      - lorenz_mM.cpp
      - heart2025.cpp
      - duck.cpp
      - heartFrac.cpp
      - feather.cpp
      - mandelbrot_meanOrbit.cpp
      - simone_attractor.cpp
    - Updated
      - newton_z6.cpp: Fixed non-const trig functions for MSVC
      - phoenix.cpp, phoenixD.cpp, phoenixI.cpp: Added OpenMP 2.0 support
  - Miscellaneous
    - Broke utest_colorTpl.cpp up into different files